; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/stanrc85/extr_layer_rgb.c_layer_state_set_user.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/stanrc85/extr_layer_rgb.c_layer_state_set_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @layer_state_set_user(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @biton32(i32 %3)
  switch i32 %4, label %15 [
    i32 0, label %5
    i32 1, label %7
    i32 2, label %9
    i32 3, label %11
    i32 4, label %13
  ]

5:                                                ; preds = %1
  %6 = call i32 @rgblight_setrgb(i32 255, i32 0, i32 0)
  br label %17

7:                                                ; preds = %1
  %8 = call i32 @rgblight_setrgb(i32 0, i32 255, i32 0)
  br label %17

9:                                                ; preds = %1
  %10 = call i32 @rgblight_setrgb(i32 0, i32 0, i32 255)
  br label %17

11:                                               ; preds = %1
  %12 = call i32 @rgblight_setrgb(i32 255, i32 255, i32 255)
  br label %17

13:                                               ; preds = %1
  %14 = call i32 @rgblight_setrgb(i32 255, i32 0, i32 255)
  br label %17

15:                                               ; preds = %1
  %16 = call i32 @rgblight_setrgb(i32 255, i32 0, i32 0)
  br label %17

17:                                               ; preds = %15, %13, %11, %9, %7, %5
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @biton32(i32) #1

declare dso_local i32 @rgblight_setrgb(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
